# icfpc2010-futamura-rejection

cars/: README  car297.m  car297.nb  fetch.pl  report.sh  run.sh
cars/data/: A_cardata2dirs.sh  B_decode_cars.sh  C_solve_cars.sh  D_encode_fuel.sh  E_test_fuel.sh  F_upload_fuel.sh  car_ids  cycle.sh  dump_all_cars.sh  submit_car.py  submit_fuel2.py
cars/data/135678/: car.decoded  car.def  car.dump  car.fuel  car.fuel_formula  car.fuel_uploaded
cars/data/188810/: car.def  (+6 more)
factory/: factory2dot.pl  factory2png.sh
factory/P0/: 0.enc  1.enc  10.enc  11.enc  12.enc  13.enc  14.enc  15.enc  16.enc  17.enc  18.enc  19.enc  2.enc  20.enc  21.enc  22.enc  23.enc  24.enc  25.enc  26.enc  27.enc  28.enc  29.enc  3.enc  30.enc  31.enc  32.enc  33.enc  34.enc  35.enc  36.enc  37.enc  38.enc  39.enc  4.enc  40.enc  41.enc  42.enc  43.enc  44.enc  (+13 more)
factory/P1/: 0.enc  1.enc  10.enc  11.enc  12.enc  13.enc  14.enc  15.enc  16.enc  17.enc  18.enc  19.enc  2.enc  20.enc  21.enc  22.enc  23.enc  24.enc  25.enc  26.enc  27.enc  3.enc  4.enc  5.enc  6.enc  7.enc  8.enc  9.enc  P1.encoded
factory/P2/: 0.enc  1.enc  2.enc  3.enc  4.enc  5.enc  6.enc  P2.encoded
haskell/: README  icfpc.cabal  rebuild.sh
haskell/src/: Car.hs  Encoding.hs  NumCoding.hs  Types.hs  Wiring.hs  apply-fuel.hs  car2solver.hs  cardump.hs  encode-car.hs  encode-fuel.hs  fuel-bruteforce.hs  gate-bruteforce.hs  key-bruteforce.hs  trits2factory.hs  trits2superfactory.hs
info/: deps.dot  get_place.sh  task02.html  task03.html
matlab/: findPermutes.m  readme.m
perl/: fixedpoints.pl
perl/macro/: 3.pl  fixedpoints.pl  gates.txt  generators.pl  generators.txt  magic_numbers.txt  perm.pl  right.pl  show.pl  tri.pl
perl/scrape/: scrape.pl
scala/: pom.xml
site/: index.html
(+11 files in other folders)
